--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
       </div>
     </div>
     <script src="scripts/landing.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   </body>
 </html>
